--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-7" href="#top">
-                        Page 1</a>
+                        Events</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-7" href="#top">
-                        Page 2</a></li><li class="nav-item">
+                        Competitions</a></li><li class="nav-item">
                     <a class="nav-link link text-white display-7" href="images.html" target="_blank">Gallery</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="contact.html">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
-                    CONTACT</a></div>
+                    Contact Us</a></div>
         </div>
     </nav>
 </section>
